--- a/rocksdb/ycsb/analysis/rocksdb-thrp-vs-lat/config.yaml
+++ b/rocksdb/ycsb/analysis/rocksdb-thrp-vs-lat/config.yaml
@@ -1,1 +1,7 @@
-"RocksDB with local SSD": ~/work/mutant/log/ycsb/d-thrp-vs-lat/rocksdb-st1/good
+
+rocksdb-st1:
+  dn:
+
+
+
+"RocksDB on st1": ~/work/mutant/log/ycsb/d-thrp-vs-lat/rocksdb-st1/step-by-1000
