--- a/rocksdb/quizup/quizup/config.yaml
+++ b/rocksdb/quizup/quizup/config.yaml
@@ -113,4 +113,6 @@ simulation_time_dur_in_sec: 60000
 #   1x speed replay to the end
 121x_speed_replay: false
 
+pid_params: 23,0.1,0,0
+
 report_interval_in_ms: 500
