--- a/rocksdb/quizup/quizup/config.yaml
+++ b/rocksdb/quizup/quizup/config.yaml
@@ -119,6 +119,7 @@ pid_params: 23,0.1,0,0
 report_interval_in_ms: 1000
 
 sla_admin: false
+lat_hist_q_size: 30
 
 # To generate more IOs
 extra_reads: true
