--- a/rocksdb/quizup/quizup/config.yaml
+++ b/rocksdb/quizup/quizup/config.yaml
@@ -125,6 +125,5 @@ sst_ott_adj_ranges: -0.1,-0.025
 # To generate more IOs
 extra_reads: true
 xr_queue_size: 500
-# Each thread sleeps for a random time in [0, xr_thread_sleep_ms - 1] ms.
-xr_thread_sleep_ms: 300.0
+xr_iops: 1000
 xr_gets_per_key: 10
