--- a/rocksdb/quizup/quizup/config.yaml
+++ b/rocksdb/quizup/quizup/config.yaml
@@ -118,9 +118,11 @@ pid_params: 23,0.1,0,0
 # This decides the SlaAdmin adjustment interval too.
 report_interval_in_ms: 1000
 
-sla_admin: false
-lat_hist_q_size: 30
+sla_admin_type: "none"
+sla_observed_value_hist_q_size: 30
 sst_ott_adj_ranges: -0.1,-0.025
+slow_dev: xvde
+slow_dev_target_r_iops: 250
 
 # To generate more IOs
 extra_reads: true
