--- a/rocksdb/quizup/quizup/config.yaml
+++ b/rocksdb/quizup/quizup/config.yaml
@@ -123,6 +123,7 @@ sla_observed_value_hist_q_size: 30
 sst_ott_adj_ranges: -0.1,-0.025
 slow_dev: xvde
 slow_dev_target_r_iops: 250
+sst_ott_adj_cooldown_ms: 5000
 
 # To generate more IOs
 extra_reads: true
