--- a/rocksdb/quizup/quizup/config.yaml
+++ b/rocksdb/quizup/quizup/config.yaml
@@ -120,7 +120,7 @@ report_interval_in_ms: 1000
 
 sla_admin_type: "none"
 sla_observed_value_hist_q_size: 30
-sst_ott_adj_ranges: -0.1,-0.025
+error_adj_ranges: -0.1,-0.025
 slow_dev: xvde
 slow_dev_target_r_iops: 250
 sst_ott_adj_cooldown_ms: 5000
