--- a/rocksdb/quizup/quizup/config.yaml
+++ b/rocksdb/quizup/quizup/config.yaml
@@ -123,6 +123,7 @@ sla_observed_value_hist_q_size: 30
 error_adj_ranges: -0.1,-0.025
 slow_dev: xvde
 sst_ott_adj_cooldown_ms: 5000
+pid_i_exp_decay_factor: 0.9
 
 # To generate more IOs
 extra_reads: true
