mark overloaded differently

--- a/rocksdb/baseline/rocksdb-ycsb-thrp-vs-latency-by-storages/config.yaml
+++ b/rocksdb/baseline/rocksdb-ycsb-thrp-vs-latency-by-storages/config.yaml
@@ -39,9 +39,13 @@ local-ssd:
   90000:
     fn: 171123-192546/171123-205242/ycsb/171124-020403.056-d
     time: 00:00:40-00:04:00
+    overloaded: true
+
+  # From here, you don't get a sustainable throughput
   100000:
     fn: 171123-192546/171123-192440/ycsb/171124-003616.509-d
     time: 00:00:40-00:04:00
+    overloaded: true
 
   # A big dip
   #110000: 171123-192546/171123-192503/ycsb/171124-003716.332-d
@@ -49,14 +53,17 @@ local-ssd:
   110000:
     fn: 171123-192546/171123-214042/ycsb/171124-025239.262-d
     time: 00:00:40-00:03:00
+    overloaded: true
   120000:
     fn: 171123-192546/171123-205305/ycsb/171124-020425.441-d
     time: 00:00:40-00:03:00
+    overloaded: true
 
   # Saturated
   #130000:
   #  fn: 171123-192546/171123-205330/ycsb/171124-020405.787-d
   #  time: 00:00:40-00:03:00
+  # overloaded: true
 
 
 ebs-st1:
@@ -83,14 +90,16 @@ ebs-st1:
     time: 00:45:00-01:30:00
 
   # Saturated from here
-  #3500:
-  #  fn: 171123-192546/171123-215703/ycsb/171124-031557.478-d
-  #  time: 00:15:00-00:45:00
-  #  #time: 00:25:00-01:20:00
+  3500:
+    fn: 171123-192546/171123-215703/ycsb/171124-031557.478-d
+    time: 00:20:00-00:45:00
+    #time: 00:25:00-01:20:00
+    overloaded: true
 
-  #4000:
-  #  fn: 171123-192546/171123-204729/ycsb/171124-020548.718-d
-  #  time: 00:25:00-01:20:00
+  4000:
+    fn: 171123-192546/171123-204729/ycsb/171124-020548.718-d
+    time: 00:16:00-01:08:00
+    overloaded: true
   #4500:
   #  fn: 171123-192546/171123-204753/ycsb/171124-020556.351-d
   #  time: 00:20:00-01:20:00
