--- a/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
+++ b/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
@@ -78,7 +78,7 @@ mutant:
     "0.4, 0.05":
       1000:
         fn: 171203-234206/ycsb/171204-050002.160-d
-        time: 01:20:00-04:30:00
+        time: 01:35:00-02:15:00
       3000:
         fn: 171201-131109/ycsb/171201-183014.754-d
         time: 00:32:00-01:30:00
@@ -102,13 +102,13 @@ mutant:
     "0.5, 0.1":
       1000:
         fn: 171204-014055/ycsb/171204-070006.747-d
-        time: 01:20:00-05:00:00
+        time: 01:30:00-02:40:00
       5000:
         fn: 171204-014116/ycsb/171204-065958.375-d
         time: 00:18:00-00:50:00
       10000:
         fn: 171204-014140/ycsb/171204-070147.699-d
-        time: 00:09:00-00:30:00
+        time: 00:09:30-00:14:00
       15000:
         fn: 171204-014158/ycsb/171204-070040.883-d
         time: 00:06:00-00:17:00
@@ -152,13 +152,13 @@ rocksdb:
       time: 00:08:00-00:50:00
     10000:
       fn: 171123-192546/171123-192121/ycsb/171124-003236.229-d
-      time: 00:04:00-00:19:00
+      time: 00:12:00-00:19:00
     20000:
       fn: 171123-192546/171123-192145/ycsb/171124-003301.626-d
       time: 00:02:00-00:12:00
     30000:
       fn: 171123-192546/171123-192207/ycsb/171124-003351.679-d
-      time: 00:01:20-00:08:00
+      time: 00:01:20-00:04:30
     40000:
       fn: 171123-192546/171123-192231/ycsb/171124-003359.935-d
       time: 00:01:10-00:06:00
@@ -172,12 +172,12 @@ rocksdb:
     # TODO: Do 1K
     70000:
       fn: 171123-192546/171123-192336/ycsb/171124-003553.173-d
-      time: 00:03:00-00:04:00
+      time: 00:02:40-00:04:00
       #fn: 171123-192546/171124-150122/ycsb/171124-201257.417-d
       #time: 00:00:45-01:50:00
     80000:
       fn: 171123-192546/171123-205216/ycsb/171124-020312.146-d
-      time: 00:00:40-00:04:00
+      time: 00:00:30-00:03:00
       #fn: 171123-192546/171124-150140/ycsb/171124-201256.404-d
       #time: 00:00:35-00:02:02
     #90000:
@@ -233,14 +233,14 @@ rocksdb:
       fn: 171123-192546/171123-204647/ycsb/171124-020432.406-d
       time: 00:40:00-01:30:00
 
+    # These 3 have too low latency.
+    # TODO: Let's try some more
     #3100:
     #  fn: 171123-192546/171124-172326/ycsb/171124-224206.725-d
     #  time: 00:50:00-01:20:00
-
     #3200:
     #  fn: 171123-192546/171124-172348/ycsb/171124-224243.597-d
     #  time: 00:58:00-01:20:00
-
     #3300:
     #  fn: 171123-192546/171124-172416/ycsb/171124-224229.031-d
     #  time: 01:06:00-01:20:00
