--- a/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
+++ b/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
@@ -6,33 +6,79 @@ mutant:
       # target_iops
       1000:
         fn: 171204-162903/ycsb/171204-214803.510-d
-        time: 01:30:00-04:00:00
+        #time: 01:30:00-04:00:00
+        time: 01:10:00-04:00:00
       1500:
         fn: 171204-162927/ycsb/171204-214826.245-d
         time: 01:00:00-03:00:00
       2000:
         fn: 171204-162955/ycsb/171204-214910.903-d
         time: 00:45:00-02:30:00
+      # These 2 have strangly low latencies. Replaced
+      #2500:
+      #  fn: 171204-163020/ycsb/171204-214910.962-d
+      #  time: 00:40:00-02:00:00
+      #3000:
+      #  fn: 171204-163043/ycsb/171204-214842.530-d
+      #  time: 00:35:00-01:30:00
       2500:
-        fn: 171204-163020/ycsb/171204-214910.962-d
-        time: 00:40:00-02:00:00
+        fn: 171217-234412/ycsb/171218-050250.037-d
+        #time: 00:45:00-01:35:00
+        #time: 01:10:00-01:35:00
+        #time: 01:05:00-01:15:00
+        time: 00:43:00-00:55:00
       3000:
-        fn: 171204-163043/ycsb/171204-214842.530-d
-        time: 00:35:00-01:30:00
+        fn: 171217-234431/ycsb/171218-050246.279-d
+        time: 00:35:00-01:25:00
+      3100:
+        fn: 171217-234452/ycsb/171218-050329.016-d
+        time: 00:40:00-01:25:00
+      # I don't like it. Too low.
+      3200:
+        fn: 171217-234511/ycsb/171218-050328.628-d
+        time: 00:42:00-01:20:00
+      3300:
+        fn: 171217-234531/ycsb/171218-050356.024-d
+        time: 00:45:00-01:20:00
+      # Too low
+      3400:
+        fn: 171217-234554/ycsb/171218-050437.227-d
+        time: 00:46:00-01:20:00
+
+      # Too high. Replaced
+      #3500:
+      #  fn: 171204-163109/ycsb/171204-214910.888-d
+      #  time: 00:05:00-01:20:00
       3500:
-        fn: 171204-163109/ycsb/171204-214910.888-d
-        time: 00:05:00-01:20:00
+        fn: 171217-234613/ycsb/171218-050330.791-d
+        time: 00:50:00-01:20:00
+
+      3800:
+        fn: 171219-201107/ycsb/171220-012954.238-d
+        time: 01:42:00-02:15:00
+      3900:
+        fn: 171219-201122/ycsb/171220-012952.208-d
+        time: 01:42:00-02:15:00
+      4000:
+        fn: 171219-201140/ycsb/171220-013001.585-d
+        time: 01:40:00-02:15:00
+
       # Never stabilized
-      #4000:
-      #  fn: 171204-163133/ycsb/171204-214954.640-d
-      #  time: 00:00:00-00:00:00
-      #5000:
-      #  fn: 171204-163156/ycsb/171204-215021.988-d
-      #  time: 00:00:00-00:00:00
+      #4000: 171204-163133/ycsb/171204-214954.640-d
+      #5000: 171204-163156/ycsb/171204-215021.988-d
+      #5000: 171219-201157/ycsb/171220-013108.431-d
+
+      # New exps. Never checked out.
+      #1000: 171217-234305/ycsb/171218-050209.210-d
+      #1500: 171217-234325/ycsb/171218-050320.630-d
+      #2000: 171217-234350/ycsb/171218-050332.303-d
+
     "0.2, 0.1":
       1000:
         fn: 171204-022041/ycsb/171204-073914.807-d
-        time: 01:30:00-04:30:00
+        #time: 01:30:00-04:30:00
+        #time: 00:10:00-01:05:00
+        time: 00:50:00-01:05:00
       1500:
         fn: 171204-022102/ycsb/171204-073953.581-d
         time: 01:00:00-03:00:00
@@ -40,6 +86,7 @@ mutant:
         fn: 171204-022129/ycsb/171204-074028.217-d
         time: 00:45:00-02:30:00
       # Strange memory cache size pattern. Let's see. I may want to replace it depending on the result.
+      # TODO: totally needs to be redone. Latency too high.
       2500:
         fn: 171204-022150/ycsb/171204-074005.174-d
         time: 00:10:00-00:28:00
@@ -58,7 +105,10 @@ mutant:
     "0.3, 0.05":
       1000:
         fn: 171204-012417/ycsb/171204-064412.801-d
-        time: 01:30:00-04:30:00
+        #time: 01:30:00-04:30:00
+        #time: 01:25:00-02:10:00
+        #time: 01:40:00-02:05:00
+        time: 01:45:00-02:00:00
       2000:
         fn: 171204-012438/ycsb/171204-064405.592-d
         time: 01:20:00-02:30:00
@@ -214,21 +264,71 @@ rocksdb:
     #500:
     #  fn: 171123-204441/ycsb/171124-020324.827-d
     #  time: 01:30:00-08:00:00
+
+    # The lowest 2 have super high latencies. Interesting. EBS cache being cold due to less request density  might explain this.
     1000:
       fn: 171123-204507/ycsb/171124-020349.217-d
       time: 00:40:00-04:00:00
     1500:
       fn: 171123-204532/ycsb/171124-020342.520-d
       time: 00:25:00-02:40:00
+
+    # Strangely high
+    #2000:
+    #  fn: 171123-204559/ycsb/171124-020412.518-d
+    #  time: 00:11:30-02:00:00
+
+    #2500:
+    #  fn: 171123-204623/ycsb/171124-020430.055-d
+    #  time: 00:20:00-01:40:00
+    #3000:
+    #  fn: 171123-204647/ycsb/171124-020432.406-d
+    #  time: 00:40:00-01:30:00
+
+    # New exps.
+    #1000: 171218-001914/ycsb/171218-054836.553-d
+    #1500:
+    #  fn: 171218-005106/ycsb/171218-060948.823-d
+    #  time: 01:25:00-01:50:00
+
     2000:
-      fn: 171123-204559/ycsb/171124-020412.518-d
-      time: 00:11:30-02:00:00
+      fn: 171218-005131/ycsb/171218-061027.773-d
+      time: 01:25:00-01:50:00
+
     2500:
-      fn: 171123-204623/ycsb/171124-020430.055-d
-      time: 00:20:00-01:40:00
+      fn: 171218-005156/ycsb/171218-061039.901-d
+      time: 01:10:00-01:40:00
+
+    # These 3 have super low latencies. It might be what it's supposed to be.
     3000:
-      fn: 171123-204647/ycsb/171124-020432.406-d
-      time: 00:40:00-01:30:00
+      fn: 171218-005219/ycsb/171218-061045.860-d
+      time: 00:50:00-01:30:00
+    3100:
+      fn: 171218-005241/ycsb/171218-061117.888-d
+      time: 00:55:00-01:20:00
+    # This one is even lower. TODO: Add more points. Make the experiment time longer.
+    3200:
+      fn: 171218-005302/ycsb/171218-061056.449-d
+      time: 01:02:00-01:18:00
+
+    3300:
+      fn: 171219-195334/ycsb/171220-011232.144-d
+      time: 01:52:00-02:22:00
+
+    # Stabilized for a very brief moment. This must have been the boundary.
+    3500:
+      fn: 171219-195409/ycsb/171220-011300.754-d
+      time: 01:26:55-01:32:05
+
+    # These never made it. Seems like after some SSTable reorg, EBS rate limit kicked in.
+    #3600: 171219-195430/ycsb/171220-011426.464-d
+    #3700: 171219-195448/ycsb/171220-011430.016-d
+    #3800: 171219-195502/ycsb/171220-011348.201-d
+    #3900: 171219-195529/ycsb/171220-011401.279-d
+
+
+
+
 
     # These 3 have too low latency.
     # TODO: Let's try some more
