--- a/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
+++ b/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
@@ -26,45 +26,74 @@ mutant:
         #time: 00:45:00-01:35:00
         #time: 01:10:00-01:35:00
         #time: 01:05:00-01:15:00
-        time: 00:43:00-00:55:00
+        #time: 00:43:00-00:55:00
+        time: 01:22:00-01:38:00
       3000:
         fn: 171217-234431/ycsb/171218-050246.279-d
         time: 00:35:00-01:25:00
-      3100:
-        fn: 171217-234452/ycsb/171218-050329.016-d
-        time: 00:40:00-01:25:00
-      # I don't like it. Too low.
-      3200:
-        fn: 171217-234511/ycsb/171218-050328.628-d
-        time: 00:42:00-01:20:00
-      3300:
-        fn: 171217-234531/ycsb/171218-050356.024-d
-        time: 00:45:00-01:20:00
-      # Too low
-      3400:
-        fn: 171217-234554/ycsb/171218-050437.227-d
-        time: 00:46:00-01:20:00
+      #3100:
+      #  fn: 171217-234452/ycsb/171218-050329.016-d
+      #  time: 00:40:00-01:25:00
+      #3200:
+      #  fn: 171217-234511/ycsb/171218-050328.628-d
+      #  time: 00:39:10-01:20:00
+      #3300:
+      #  fn: 171217-234531/ycsb/171218-050356.024-d
+      #  time: 00:45:00-01:20:00
+      #3400:
+      #  fn: 171217-234554/ycsb/171218-050437.227-d
+      #  time: 00:46:00-01:20:00
 
       # Too high. Replaced
       #3500:
       #  fn: 171204-163109/ycsb/171204-214910.888-d
       #  time: 00:05:00-01:20:00
+
       3500:
         fn: 171217-234613/ycsb/171218-050330.791-d
         time: 00:50:00-01:20:00
 
-      3800:
-        fn: 171219-201107/ycsb/171220-012954.238-d
-        time: 01:42:00-02:15:00
-      3900:
-        fn: 171219-201122/ycsb/171220-012952.208-d
-        time: 01:42:00-02:15:00
+      #3600:
+      #  fn: 171219-201022/ycsb/171220-012921.787-d
+      #  time: 01:20:00-01:30:00
+      #3700:
+      #  fn: 171219-201048/ycsb/171220-013046.192-d
+      #  time: 01:00:00-01:36:00
+
+      #3800:
+      #  fn: 171219-201107/ycsb/171220-012954.238-d
+      #  time: 01:42:00-02:15:00
+      #3900:
+      #  fn: 171219-201122/ycsb/171220-012952.208-d
+      #  time: 01:42:00-02:15:00
       4000:
         fn: 171219-201140/ycsb/171220-013001.585-d
         time: 01:40:00-02:15:00
+      #4100:
+      #  fn: 171219-220346/ycsb/171220-032248.215-d
+      #  time: 01:37:00-01:46:00
+      #4200:
+      #  fn: 171219-220407/ycsb/171220-032320.079-d
+      #  time: 01:32:00-01:56:00
+      4300:
+        fn: 171219-220423/ycsb/171220-032309.606-d
+        time: 01:34:00-02:00:00
+      #4400:
+      #  fn: 171219-220445/ycsb/171220-032312.563-d
+      #  time: 01:40:45-02:00:00
+      # These 2 stablized at the very end
+      #4500:
+      #  fn: 171219-224317/ycsb/171220-040225.180-d
+      #  time: 01:45:57-02:00:00
+      4600:
+        fn: 171219-224333/ycsb/171220-040217.465-d
+        time: 01:43:53-01:50:00
 
       # Never stabilized
       #4000: 171204-163133/ycsb/171204-214954.640-d
+      #4700: 171219-224354/ycsb/171220-040249.597-d
+      #4800: 171219-224409/ycsb/171220-040249.954-d
+      #4900: 171219-231906/ycsb/171220-044020.228-d
       #5000: 171204-163156/ycsb/171204-215021.988-d
       #5000: 171219-201157/ycsb/171220-013108.431-d
 
@@ -85,14 +114,15 @@ mutant:
       2000:
         fn: 171204-022129/ycsb/171204-074028.217-d
         time: 00:45:00-02:30:00
-      # Strange memory cache size pattern. Let's see. I may want to replace it depending on the result.
-      # TODO: totally needs to be redone. Latency too high.
-      2500:
-        fn: 171204-022150/ycsb/171204-074005.174-d
-        time: 00:10:00-00:28:00
+
+      # Strange memory cache size pattern. Latency too high.
+      #2500:
+      #  fn: 171204-022150/ycsb/171204-074005.174-d
+      #  time: 00:10:00-00:28:00
+
       3000:
         fn: 171204-022211/ycsb/171204-074039.433-d
-        time: 00:30:00-01:30:00
+        time: 00:26:00-01:30:00
       3500:
         fn: 171204-022233/ycsb/171204-074031.803-d
         time: 00:26:00-01:20:00
@@ -101,7 +131,11 @@ mutant:
         time: 00:25:00-01:10:00
       5000:
         fn: 171204-160531/ycsb/171204-212421.144-d
-        time: 00:45:00-00:55:00
+        time: 00:44:18-00:55:00
+      # These never stablized
+      #10000: 171219-232207/ycsb/171220-044055.448-d
+      #20000: 171219-232231/ycsb/171220-044127.461-d
+      #40000: 171219-232245/ycsb/171220-044112.843-d
     "0.3, 0.05":
       1000:
         fn: 171204-012417/ycsb/171204-064412.801-d
@@ -114,17 +148,24 @@ mutant:
         time: 01:20:00-02:30:00
       3000:
         fn: 171204-012501/ycsb/171204-064339.447-d
-        time: 00:30:00-01:10:00
+        #time: 00:30:00-01:10:00
+        time: 00:30:00-00:50:00
       4000:
         fn: 171204-012521/ycsb/171204-064542.379-d
         time: 00:21:00-00:35:00
       5000:
         fn: 171204-012543/ycsb/171204-064302.726-d
-        time: 00:20:00-00:50:00
-      # Not saturated. TODO: Go further!
+        #time: 00:20:00-00:50:00
+        time: 00:39:00-00:50:00
       6000:
         fn: 171204-012608/ycsb/171204-064406.503-d
         time: 00:20:00-00:45:00
+    #"0.3, 0.1":
+      # None of these got stablized
+      #10000: 171219-232324/ycsb/171220-044149.632-d
+      #20000: 171219-232343/ycsb/171220-044144.649-d
+      #40000: 171219-232357/ycsb/171220-044145.563-d
+      #80000: 171219-232417/ycsb/171220-044128.502-d
     "0.4, 0.05":
       1000:
         fn: 171203-234206/ycsb/171204-050002.160-d
@@ -138,8 +179,7 @@ mutant:
       10000:
         fn: 171203-234250/ycsb/171204-050104.046-d
         time: 00:12:00-00:30:00
-      # Stablizing towards the end. Will need more time
-      # TODO: Make the experiment period longer and see what you gt
+      # Stablizing towards the end. Will need more time. Make the experiment period longer and see what you gt
       #15000:
       #  fn: 171203-234311/ycsb/171204-050051.193-d
       #  time: 00:00:00-00:00:00
@@ -149,6 +189,11 @@ mutant:
       #25000:
       #  fn: 171203-234356/ycsb/171204-050043.263-d
       #  time: 00:00:00-00:00:00
+    #"0.4, 0.1":
+      # These never got stablized
+      #20000: 171220-002419/ycsb/171220-054257.270-d
+      #40000: 171220-002435/ycsb/171220-054244.362-d
+      #80000: 171220-002455/ycsb/171220-054332.019-d
     "0.5, 0.1":
       1000:
         fn: 171204-014055/ycsb/171204-070006.747-d
@@ -173,8 +218,11 @@ mutant:
         time: 00:03:20-00:07:00
       50000:
         fn: 171204-014325/ycsb/171204-070157.766-d
-        time: 00:03:30-00:06:00
-      # Not sustainable
+        time: 00:04:00-04:40:00
+      60000:
+        fn: 171220-002741/ycsb/171220-054644.848-d
+        time: 00:04:00-00:06:00
+      # These never stabilized
       #70000:
       #  fn: 171204-161559/ycsb/171204-213532.826-d
       #  time: 00:00:00-00:00:00
@@ -217,8 +265,6 @@ rocksdb:
     60000:
       fn: 171123-192313/ycsb/171124-003443.846-d
       time: 00:00:50-00:04:00
-    # TODO: Redo 70K, 80K, and 90K
-    # TODO: Do 1K
     70000:
       fn: 171123-192336/ycsb/171124-003553.173-d
       time: 00:02:40-00:04:00
@@ -229,9 +275,9 @@ rocksdb:
       time: 00:00:30-00:03:00
       #fn: 171124-150140/ycsb/171124-201256.404-d
       #time: 00:00:35-00:02:02
-    #90000:
-    #  fn: 171123-205242/ycsb/171124-020403.056-d
-    #  time: 00:00:40-00:04:00
+    90000:
+      fn: 171123-205242/ycsb/171124-020403.056-d
+      time: 00:00:40-00:04:00
     #  overloaded: true
     ##
     ## From here, you don't get a sustainable throughput
@@ -293,28 +339,29 @@ rocksdb:
 
     2000:
       fn: 171218-005131/ycsb/171218-061027.773-d
-      time: 01:25:00-01:50:00
+      time: 00:17:00-01:50:00
 
     2500:
       fn: 171218-005156/ycsb/171218-061039.901-d
-      time: 01:10:00-01:40:00
+      time: 00:46:00-01:40:00
 
     # These 3 have super low latencies. It might be what it's supposed to be.
     3000:
       fn: 171218-005219/ycsb/171218-061045.860-d
       time: 00:50:00-01:30:00
-    3100:
-      fn: 171218-005241/ycsb/171218-061117.888-d
-      time: 00:55:00-01:20:00
-    # This one is even lower. TODO: Add more points. Make the experiment time longer.
-    3200:
-      fn: 171218-005302/ycsb/171218-061056.449-d
-      time: 01:02:00-01:18:00
-
+    #3100:
+    #  fn: 171218-005241/ycsb/171218-061117.888-d
+    #  time: 00:55:00-01:20:00
+    # This one is even lower.
+    #3200:
+    #  fn: 171218-005302/ycsb/171218-061056.449-d
+    #  time: 00:58:48-01:18:00
     3300:
       fn: 171219-195334/ycsb/171220-011232.144-d
-      time: 01:52:00-02:22:00
-
+      time: 01:51:30-02:22:00
+    #3400:
+    #  fn: 171219-222237/ycsb/171220-034134.142-d
+    #  time: 01:54:00-02:18:00
     # Stabilized for a very brief moment. This must have been the boundary.
     3500:
       fn: 171219-195409/ycsb/171220-011300.754-d
@@ -326,12 +373,7 @@ rocksdb:
     #3800: 171219-195502/ycsb/171220-011348.201-d
     #3900: 171219-195529/ycsb/171220-011401.279-d
 
-
-
-
-
-    # These 3 have too low latency.
-    # TODO: Let's try some more
+    # These 3 have too low latency. Let's try some more
     #3100:
     #  fn: 171124-172326/ycsb/171124-224206.725-d
     #  time: 00:50:00-01:20:00
