more colors in the color heatmap. Simplified the chart.

--- a/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
+++ b/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
@@ -132,7 +132,15 @@ mutant:
       5000:
         fn: 171204-160531/ycsb/171204-212421.144-d
         time: 00:44:18-00:55:00
+      # Briefly stablized
+      6000:
+        fn: 171220-135045/ycsb/171220-190910.626-d
+        time: 01:38:00-01:47:00
+
       # These never stablized
+      #7000: 171220-135106/ycsb/171220-190914.025-d
+      #8000: 171220-135124/ycsb/171220-191008.499-d
+      #9000: 171220-135142/ycsb/171220-191020.377-d
       #10000: 171219-232207/ycsb/171220-044055.448-d
       #20000: 171219-232231/ycsb/171220-044127.461-d
       #40000: 171219-232245/ycsb/171220-044112.843-d
@@ -189,8 +197,18 @@ mutant:
       #25000:
       #  fn: 171203-234356/ycsb/171204-050043.263-d
       #  time: 00:00:00-00:00:00
-    #"0.4, 0.1":
+    "0.4, 0.1":
+      12000:
+        fn: 171220-140714/ycsb/171220-192605.832-d
+        time: 00:35:00-00:50:00
+      14000:
+        fn: 171220-140734/ycsb/171220-192609.883-d
+        time: 00:30:00-00:45:00
+      16000:
+        fn: 171220-140753/ycsb/171220-192605.304-d
+        time: 00:30:00-00:40:00
       # These never got stablized
+      #18000: 171220-140816/ycsb/171220-192607.552-d
       #20000: 171220-002419/ycsb/171220-054257.270-d
       #40000: 171220-002435/ycsb/171220-054244.362-d
       #80000: 171220-002455/ycsb/171220-054332.019-d
@@ -222,16 +240,22 @@ mutant:
       60000:
         fn: 171220-002741/ycsb/171220-054644.848-d
         time: 00:04:00-00:06:00
+
+      # Haven't checked out these
+      #62000: 171220-141858/ycsb/171220-194005.780-d
+      #64000: 171220-141918/ycsb/171220-193732.150-d
+      #66000: 171220-141933/ycsb/171220-193803.532-d
+
+      68000:
+        fn: 171220-141949/ycsb/171220-193800.794-d
+        time: 00:04:10-00:05:10
+
       # These never stabilized
-      #70000:
-      #  fn: 171204-161559/ycsb/171204-213532.826-d
-      #  time: 00:00:00-00:00:00
-      #80000:
-      #  fn: 171204-161622/ycsb/171204-213503.027-d
-      #  time: 00:00:00-00:00:00
-      #90000:
-      #  fn: 171204-161644/ycsb/171204-213530.554-d
-      #  time: 00:00:00-00:00:00
+      #70000: 171220-114645/ycsb/171220-170550.544-d
+      #80000: 171220-114708/ycsb/171220-170535.238-d
+      #70000: 171204-161559/ycsb/171204-213532.826-d
+      #80000: 171204-161622/ycsb/171204-213503.027-d
+      #90000: 171204-161644/ycsb/171204-213530.554-d
 
 rocksdb:
   dn_base: ~/work/mutant/log/ycsb/rocksdb-ycsb-by-storages/trade-offs
