--- a/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
+++ b/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
@@ -167,10 +167,21 @@ mutant:
         time: 00:39:00-00:50:00
       6000:
         fn: 171204-012608/ycsb/171204-064406.503-d
-        time: 00:20:00-00:45:00
-    #"0.3, 0.1":
+        time: 00:16:30-00:45:00
+    "0.3, 0.1":
+      7000:
+        fn: 171221-011846/ycsb/171221-063743.371-d
+        time: 01:08:00-01:12:00
+      8000:
+        fn: 171221-011907/ycsb/171221-063707.920-d
+        time: 00:52:00-01:20:00
+      9000:
+        fn: 171221-011926/ycsb/171221-063749.869-d
+        time: 00:55:00-01:11:00
       # None of these got stablized
+      #10000: 171221-011947/ycsb/171221-063753.234-d
       #10000: 171219-232324/ycsb/171220-044149.632-d
+      #11000: 171221-012005/ycsb/171221-063728.171-d
       #20000: 171219-232343/ycsb/171220-044144.649-d
       #40000: 171219-232357/ycsb/171220-044145.563-d
       #80000: 171219-232417/ycsb/171220-044128.502-d
@@ -184,9 +195,11 @@ mutant:
       5000:
         fn: 171203-234229/ycsb/171204-050030.313-d
         time: 00:20:00-00:50:00
-      10000:
-        fn: 171203-234250/ycsb/171204-050104.046-d
-        time: 00:12:00-00:30:00
+
+      #10000:
+      #  fn: 171203-234250/ycsb/171204-050104.046-d
+      #  time: 00:12:00-00:30:00
+
       # Stablizing towards the end. Will need more time. Make the experiment period longer and see what you gt
       #15000:
       #  fn: 171203-234311/ycsb/171204-050051.193-d
@@ -198,15 +211,27 @@ mutant:
       #  fn: 171203-234356/ycsb/171204-050043.263-d
       #  time: 00:00:00-00:00:00
     "0.4, 0.1":
+      #1000: 171220-212135/ycsb/171221-024012.594-d
+      #5000:
+      #  fn: 171220-212154/ycsb/171221-023955.824-d
+      #  time: 00:35:00-01:12:30
+      10000:
+        fn: 171220-212213/ycsb/171221-024016.846-d
+        #time: 00:41:00-01:04:00
+        time: 00:25:00-00:34:30
       12000:
         fn: 171220-140714/ycsb/171220-192605.832-d
         time: 00:35:00-00:50:00
-      14000:
-        fn: 171220-140734/ycsb/171220-192609.883-d
-        time: 00:30:00-00:45:00
+      #14000:
+      #  fn: 171220-140734/ycsb/171220-192609.883-d
+      #  time: 00:30:00-00:45:00
       16000:
         fn: 171220-140753/ycsb/171220-192605.304-d
         time: 00:30:00-00:40:00
+      # Briefly stablized
+      17000:
+        fn: 171220-212228/ycsb/171221-024029.411-d
+        time: 00:34:00-00:38:00
       # These never got stablized
       #18000: 171220-140816/ycsb/171220-192607.552-d
       #20000: 171220-002419/ycsb/171220-054257.270-d
