--- a/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
+++ b/rocksdb/eval/mutant-ycsb-thrp-latency-by-costs/config.yaml
@@ -128,16 +128,22 @@ mutant:
         time: 00:26:00-01:20:00
       4000:
         fn: 171204-160507/ycsb/171204-212419.263-d
-        time: 00:25:00-01:10:00
+        time: 00:23:20-01:10:00
+      #5000:
+      #  fn: 171204-160531/ycsb/171204-212421.144-d
+      #  time: 00:44:18-00:55:00
       5000:
-        fn: 171204-160531/ycsb/171204-212421.144-d
-        time: 00:44:18-00:55:00
+        fn: 171222-150531/ycsb/171222-202358.189-d
+        #time: 00:50:00-01:10:00
+        #time: 01:02:00-01:08:00
+        time: 01:25:00-01:35:00
       # Briefly stablized
       6000:
         fn: 171220-135045/ycsb/171220-190910.626-d
         time: 01:38:00-01:47:00
 
       # These never stablized
+      #6200: 171222-150606/ycsb/171222-202417.894-d
       #7000: 171220-135106/ycsb/171220-190914.025-d
       #8000: 171220-135124/ycsb/171220-191008.499-d
       #9000: 171220-135142/ycsb/171220-191020.377-d
@@ -179,6 +185,8 @@ mutant:
         fn: 171221-011926/ycsb/171221-063749.869-d
         time: 00:55:00-01:11:00
       # None of these got stablized
+      #9200: 171222-165613/ycsb/171222-221445.989-d
+      #9900: 171222-165800/ycsb/171222-221552.527-d
       #10000: 171221-011947/ycsb/171221-063753.234-d
       #10000: 171219-232324/ycsb/171220-044149.632-d
       #11000: 171221-012005/ycsb/171221-063728.171-d
