--- a/rocksdb/eval/mutant-mdcaching-ycsb-thrp-latency-by-costs/config.yaml
+++ b/rocksdb/eval/mutant-mdcaching-ycsb-thrp-latency-by-costs/config.yaml
@@ -51,7 +51,8 @@ mutant:
         time: 00:45:00-01:55:00
       3000:
         fn: 171220-183929/ycsb/171220-235722.453-d
-        time: 00:30:00-01:55:00
+        #time: 00:30:00-01:55:00
+        time: 00:30:00-01:00:00
       4000:
         fn: 171220-183951/ycsb/171220-235711.386-d
         time: 00:30:00-01:30:00
